fix(lan): keep Android queue compatible with minSdk